--- a/Site/main/static/main/css/main.css
+++ b/Site/main/static/main/css/main.css
@@ -17,4 +17,30 @@ aside .logo {
     font-size: 25px;
     margin-left: 10px;
     font-weight: bold;
+    position: relative;
+}
+
+aside h3 {
+    margin-top: 50px;
+}
+
+aside ul {
+    list-style: none;
+}
+
+aside ul li {
+    margin-top: 5px;
+    color: #fff;
+    display: block;
+    transition: transform .6s ease;
+}
+
+aside ul a {
+    text-decoration: none;
+}
+
+aside ul li:hover, aside ul a:hover {
+    color: #eb5959;
+    text-decoration: none;
+    transform: scale(1.05);
 }
