--- a/Site/main/templates/main/layout.html
+++ b/Site/main/templates/main/layout.html
@@ -14,9 +14,9 @@
   <span class="logo">Rogan Tank</span>
   <h3>Навигация</h3>
   <ul>
-    <a href=""><li><i class="fa-solid fa-house"></i>Главная</li></a>
-    <a href=""><li><i class="fa-solid fa-circle-user"></i>Про нас</li></a>
-    <a href=""><li><i class="fa-solid fa-phone"></i>Контакты</li></a>
+    <a href="{% url 'home' %}"><li><i class="fa-solid fa-house"></i>Главная</li></a>
+    <a href="{% url 'about' %}"><li><i class="fa-solid fa-circle-user"></i>Про нас</li></a>
+    <a href="/"><li><i class="fa-solid fa-phone"></i>Контакты</li></a>
   </ul>
 </aside>
 <main>
